fix: use virtual threads for managing stream sessions