@@ -22,25 +22,32 @@ public class StreamSessionsManager {
 
   private final ConcurrentMap<Long, StreamSession> boardSessions = new ConcurrentHashMap<>();
   private final ConcurrentMap<String, StreamSession> trackSessions = new ConcurrentHashMap<>();
+  private final ConcurrentMap<String, WaveformSession> waveformSessions = new ConcurrentHashMap<>();
 
-  private ExecutorService workers;
+  private ExecutorService decodeWorkers;
+  private ExecutorService streamIoWorkers;
   private ScheduledExecutorService scheduler;
 
   @PostConstruct
   void init() {
     playerManager.getConfiguration().setOutputFormat(StandardAudioDataFormats.DISCORD_PCM_S16_BE);
 
-    workers = Executors.newCachedThreadPool(r -> {
-      Thread t = new Thread(r, "playback-worker");
-      t.setDaemon(true);
-      return t;
-    });
+    ThreadFactory decodeFactory = Thread.ofVirtual()
+            .name("playback-decode-", 0)
+            .factory();
 
-    scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
-      Thread t = new Thread(r, "playback-session-cleanup");
-      t.setDaemon(true);
-      return t;
-    });
+    ThreadFactory streamIoFactory = Thread.ofVirtual()
+            .name("playback-stream-", 0)
+            .factory();
+
+    ThreadFactory cleanupFactory = Thread.ofPlatform()
+            .name("playback-cleanup-", 0)
+            .daemon(true)
+            .factory();
+
+    decodeWorkers = Executors.newThreadPerTaskExecutor(decodeFactory);
+    streamIoWorkers = Executors.newThreadPerTaskExecutor(streamIoFactory);
+    scheduler = Executors.newSingleThreadScheduledExecutor(cleanupFactory);
   }
 
   @PreDestroy
@@ -51,8 +58,12 @@ public class StreamSessionsManager {
     trackSessions.values().forEach(StreamSession::stop);
     trackSessions.clear();
 
-    workers.shutdownNow();
-    scheduler.shutdownNow();
+    waveformSessions.values().forEach(WaveformSession::stop);
+    waveformSessions.clear();
+
+    shutdownExecutor(decodeWorkers, "decodeWorkers");
+    shutdownExecutor(streamIoWorkers, "streamIoWorkers");
+    shutdownExecutor(scheduler, "scheduler");
   }
 
   public Optional<StreamSession> getBoardSession(long boardId) {
@@ -77,8 +88,7 @@ public class StreamSessionsManager {
     }
 
     try {
-      session.setWindow(windowStartS, windowEndS);
-      session.loadAndPlay(trackId, trackLink, duration);
+      session.loadAndPlay(trackId, trackLink, duration, windowStartS, windowEndS);
       return session;
     } catch (RuntimeException ex) {
       boardSessions.remove(boardId, session);
@@ -101,16 +111,6 @@ public class StreamSessionsManager {
                                          Long windowStartS,
                                          Long windowEndS) {
     String key = trackSessionKey(userId, trackId);
-    StreamSession existing = trackSessions.get(key);
-
-    if (existing != null
-            && existing.isReusableForReplay()
-            && windowStartS == null
-            && windowEndS == null) {
-      existing.activateForReplay();
-      return existing;
-    }
-
     StreamSession session = newTrackSession(trackId, key);
 
     StreamSession previous = trackSessions.put(key, session);
@@ -119,8 +119,7 @@ public class StreamSessionsManager {
     }
 
     try {
-      session.setWindow(windowStartS, windowEndS);
-      session.loadAndPlay(trackId, trackLink, duration);
+      session.loadAndPlay(trackId, trackLink, duration, windowStartS, windowEndS);
       return session;
     } catch (RuntimeException ex) {
       trackSessions.remove(key, session);
@@ -129,28 +128,28 @@ public class StreamSessionsManager {
     }
   }
 
-  public StreamSession getOrCreateTrackSessionForWaveform(long userId,
-                                                          long trackId,
-                                                          String trackLink,
-                                                          int duration) {
-    String key = trackSessionKey(userId, trackId);
+  public WaveformSession getOrCreateWaveformSession(long userId,
+                                                    long trackId,
+                                                    String trackLink,
+                                                    int duration) {
+    String key = waveformSessionKey(userId, trackId);
 
-    StreamSession existing = trackSessions.get(key);
+    WaveformSession existing = waveformSessions.get(key);
     if (existing != null) {
       return existing;
     }
 
-    StreamSession created = newTrackSession(trackId, key);
-    StreamSession raced = trackSessions.putIfAbsent(key, created);
+    WaveformSession created = newWaveformSession(trackId, key);
+    WaveformSession raced = waveformSessions.putIfAbsent(key, created);
     if (raced != null) {
       return raced;
     }
 
     try {
-      created.loadAndPlay(trackId, trackLink, duration);
+      created.loadAndAnalyze(trackLink, duration);
       return created;
     } catch (RuntimeException ex) {
-      trackSessions.remove(key, created);
+      waveformSessions.remove(key, created);
       created.stop();
       throw ex;
     }
@@ -162,9 +161,9 @@ public class StreamSessionsManager {
             false,
             playerManager,
             jwtService,
-            workers,
+            decodeWorkers,
             scheduler,
-            session -> boardSessions.remove(boardId, session)
+            () -> boardSessions.remove(boardId)
     );
   }
 
@@ -174,13 +173,43 @@ public class StreamSessionsManager {
             true,
             playerManager,
             jwtService,
-            workers,
+            decodeWorkers,
             scheduler,
-            session -> trackSessions.remove(key, session)
+            () -> trackSessions.remove(key)
+    );
+  }
+
+  WaveformSession newWaveformSession(long trackId, String key) {
+    return new WaveformSession(
+            trackId,
+            playerManager,
+            decodeWorkers,
+            scheduler,
+            () -> waveformSessions.remove(key)
     );
   }
 
   private static String trackSessionKey(long userId, long trackId) {
     return userId + ":" + trackId;
+  }
+
+  private static String waveformSessionKey(long userId, long trackId) {
+    return userId + ":" + trackId;
+  }
+
+  private static void shutdownExecutor(ExecutorService executor, String name) {
+    if (executor == null) {
+      return;
+    }
+
+    executor.shutdownNow();
+    try {
+      if (!executor.awaitTermination(5, TimeUnit.SECONDS)) {
+        log.warn("Executor {} did not terminate within timeout", name);
+      }
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+      log.warn("Interrupted while shutting down executor {}", name);
+    }
   }
 }
